compiler-skeleton/tests/compile-error/comp_oper_aritm.ln
a:int;
b:int;
c:bool;
d:int;



c=a+d;

c=a-d;

c=a*d;

c=a/d;

c=a%d;

c=a**d;

c = 2;

d = false + 5;